# FfmpegFilter

./: CMakeLists.txt  README.md  bootstrap.py  conanfile.txt
source/: CMakeLists.txt
source/include/: FfmpegFilter.h
source/src/: FfmpegFilter.cpp  bootstrap.cpp
